...
        android:layout_height="wrap_content"
        android:elevation="@dimen/default_padding"
        app:errorEnabled="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/movie_title_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/movie_title"
            android:inputType="textPersonName"
            android:text=""
...
                    app:layout_constraintTop_toTopOf="@id/runtime_header"
                    app:layout_constraintBottom_toBottomOf="@id/runtime_header"
                    />

                <EditText
                    style="@style/LightEditText"
                    android:id="@+id/edit_runtime"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginEnd="8dp"
                    android:padding="@dimen/default_padding"
                    android:digits="0123456789"
                    android:inputType="number"
...
                />

            <View style="@style/HeaderDivider"/>

            <EditText
                style="@style/LightEditText"
                android:id="@+id/edit_description"
                android:padding="@dimen/default_padding"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:minLines="4"
                android:maxLines="8"
...
                />

            <View style="@style/HeaderDivider"/>

            <EditText
                style="@style/LightEditText"
                android:id="@+id/edit_languages"
                android:padding="@dimen/default_padding"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:minLines="3"
                android:maxLines="3"
...
                    app:layout_constraintGuide_end="@dimen/base_square"
                    android:orientation="vertical"
                    />

                <ImageButton
                    style="@style/FlatButton"
                    android:id="@+id/add_release_button"
                    android:layout_width="@dimen/base_square"
                    android:layout_height="@dimen/base_square"
                    android:src="@drawable/ic_add_button"
                    android:background="@color/colorAccent"
                    android:layout_margin="0dp"
                    android:contentDescription="@string/movie_add_release_description"
...
                />

            <View style="@style/HeaderDivider"/>

            <EditText
                style="@style/LightEditText"
                android:id="@+id/edit_production_locations"
                android:padding="@dimen/default_padding"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:hint="@string/movie_enter_production_locations"
                android:minLines="3"
...
                 />

            <View style="@style/HeaderDivider"/>

            <EditText
                style="@style/LightEditText"
                android:id="@+id/edit_filming_locations"
                android:ems="10"
                android:hint="@string/movie_enter_filming_locations"
                android:padding="@dimen/default_padding"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:minLines="3"
...
