<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryLight"
    android:gravity="end"
    >

    <Button
        style="@style/FlatButton"
        android:id="@+id/negative_button"
        android:text="@string/cancel"
        />

    <Button
        style="@style/FlatButton"
        android:id="@+id/positive_button"
        android:text="@string/confirm"
        />
</LinearLayout>