...
    <!-- Basic Button -->
    <string name="add_description">Click to add an element.</string>

    <!-- Basic Dialog -->
    <string name="dialog_title">Dialog Title</string>
    <string name="dialog_message">The message of the dialog.</string>
    <string name="discard_changes">Do you really want to discard changes?</string>
    <string name="error">Error</string>
    <string name="error_storage_message">The storage could not be initialized.\n Stopping Application.</string>
    <string name="warning">Warning</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="yes">Yes</string>
...
